fixed the course name being slightly cut off in the panel sometimes

--- a/modules/concepts/client/css/panel.css
+++ b/modules/concepts/client/css/panel.css
@@ -33,7 +33,7 @@
 }
 .sidepanel header ol {
     padding-left: 0;
-    margin: 10pt 0 0 0;
+    margin: 0 0 0 0;
 }
 .sidepanel header ol li {
     display: inline;
@@ -59,9 +59,6 @@
     .sidepanel.maximized header {
         padding-left: 5px;
     }
-}
-.panel-header-content {
-    margin-top: -10px;
 }
 @media screen and (min-width: 1301px) {
     .sidepanel header h2 {
